--- a/topics/.template-topic.md
+++ b/topics/.template-topic.md
@@ -14,7 +14,7 @@ findings & tricks/tips to integrate Topic with programming education
 
 specific things we've tried that worked/didn't work. particularities to our context
 
-## Preparation
+## References
 
 currated links to learn about Topic
 
