added cognitive load and general clean up

--- a/topics/.template-topic.md
+++ b/topics/.template-topic.md
@@ -18,6 +18,11 @@ specific things we've tried that worked/didn't work. particularities to our cont
 
 currated links to learn about Topic
 
-## Paths & Exercises
+## Exercises
 
 Link to the learning paths and exercises that include this topic
+
+
+## Learning Paths
+
+- [Teaching the class](../learning-paths/teaching-the-class.md)
