--- a/exercises/.template-exercise.md
+++ b/exercises/.template-exercise.md
@@ -2,12 +2,13 @@
 
 intro to this exercise
 
-- [Template Exercise](#template-exercise)
-  - [Learning objectives](#learning-objectives)
-  - [Exercises](#exercises)
-  - [Assessment Criteria](#assessment-criteria)
-  - [Related Topics](#related-topics)
-  - [Learning Paths](#learning-paths)
+### Contents
+
+- [Learning objectives](#learning-objectives)
+- [Exercises](#exercises)
+- [Assessment Criteria](#assessment-criteria)
+- [Related Topics](#related-topics)
+- [Learning Paths](#learning-paths)
 
 ---
 
